# smr-motion

./: .gitignore  README.md
Smr/: CMakeLists.txt
Smr/Examples/: CMakeLists.txt
Smr/Examples/DynamicTimeWarping/: CMakeLists.txt  DTW.cpp
Smr/Examples/LowDimensionalSpace/: CImg.h  CMakeLists.txt  lowdim.cpp
Smr/Examples/Physics/: BonePhysics.cpp  CMakeLists.txt
Smr/Examples/QuaternionVisualization/: CMakeLists.txt  quatViz.cpp
Smr/Examples/SkeletonManipulation/: CMakeLists.txt  iva2008.cpp  skeletonmanipulation.cpp
Smr/Examples/Tentacle/: CMakeLists.txt  Tentacle.cpp  Tentacle.h  main.cpp
Smr/Examples/clientServer/: CMakeLists.txt  client.cpp  server.cpp
Smr/Examples/eulerVSQuaternion/: CMakeLists.txt  eulerVSQuaternion.cpp
Smr/Examples/motionplayer/: CMakeLists.txt  motionplayer.cpp
Smr/Examples/pca/: CMakeLists.txt  PCA.cpp
Smr/Examples/poseInterpolation/: CMakeLists.txt  poseInterpolation.cpp
Smr/Examples/pythonWrapper/: CMakeLists.txt  smrWrapper.cpp
Smr/Horde3D/Binaries/Darwin/Release/: Horde3D_Log.html
Smr/Horde3D/Binaries/Darwin/Release/Knight.app/Contents/: Info.plist
Smr/SRC/: CMakeLists.txt
Smr/SRC/SmrCore/: CMakeLists.txt  SmrActuator.h  SmrAnalyticalIKSolver.cpp  SmrAnalyticalIKSolver.h  SmrBallAndSocket.cpp  SmrBallAndSocket.h  SmrBlender.cpp  SmrBlender.h  SmrCCDSolver.cpp  SmrCCDSolver.h  SmrCore.h  SmrDof.cpp  SmrDof.h  SmrExporter.h  SmrExporterBvh.cpp  SmrGSMMSolver.cpp  SmrGSMMSolver.h  SmrIKConstraint.cpp  SmrIKConstraint.h  SmrIKSolver.cpp  SmrIKSolver.h  SmrInvJacSolver.cpp  SmrInvJacSolver.h  SmrJoint.cpp  SmrJoint.h  SmrKinematicChain.cpp  SmrKinematicChain.h  SmrKinematicJoint.cpp  SmrKinematicJoint.h  SmrLoader.h  SmrLoaderAcclaim.cpp  SmrLoaderBvh.cpp  SmrLoaderVsk.cpp  SmrMotion.cpp  SmrMotion.h  SmrMotionPlayer.cpp  SmrMotionPlayer.h  SmrSimpleJointActuator.cpp  SmrSimpleJointActuator.h  SmrSkeleton.h  (+4 more)
Smr/SRC/SmrIO/: CMakeLists.txt  SmrExporter.h  SmrExporterAcclaim.cpp  SmrExporterBvh.cpp  SmrIO.h  SmrLoader.h  SmrLoaderAcclaim.cpp  SmrLoaderBvh.cpp  SmrLoaderVsk.cpp
Smr/SRC/SmrMath/: CMakeLists.txt  SmrDTW.cpp  SmrDTW.h  SmrDTW.inl  SmrMath.h  SmrPCA.cpp  SmrPCA.h  SmrParticleFilter.h  SmrQuaternion.h  SmrQuaternion.inl  SmrRandom.cpp  SmrRandom.h  SmrTimeSerie.h  SmrTimeSerie.inl  SmrVector3.h  SmrVector3.inl
Smr/SRC/SmrRenderer/: CMakeLists.txt  Shaders.cpp  Shaders.h  SmrBasicRenderer.cpp  SmrBasicRenderer.h  SmrRenderer.h  SmrSimpleRenderer.cpp  SmrSimpleRenderer.h
Smr/SRC/SmrUtils/: CMakeLists.txt  HordeApplication.cpp  HordeApplication.h  HordeBones.cpp  HordeBones.h  HordeCamera.cpp  HordeCamera.h  HordeNode.cpp  HordeNode.h  HordeResource.cpp  HordeResource.h  HordeWindow.cpp  HordeWindow.h  SmrUtils.cpp  SmrUtils.h
Smr/SRC/common/: CMakeLists.txt  Path.cpp  Path.h  Shaders.h  Smr.h  SmrSTL.h  SmrSmartPointer.h  logger.h
Smr/Tutorials/: CMakeLists.txt
Smr/Tutorials/Tutorial00/: CMakeLists.txt  Tutorial00.cpp
Smr/Tutorials/Tutorial01/: CMakeLists.txt  Tutorial01.cpp
Smr/Tutorials/Tutorial02/: CMakeLists.txt  Tutorial02.cpp
Smr/Tutorials/Tutorial03/: CMakeLists.txt  Tutorial03.cpp
Smr/Tutorials/Tutorial04/: CMakeLists.txt  Tutorial04.cpp
Smr/Tutorials/Tutorial05/: CMakeLists.txt  Tutorial05.cpp
Smr/tests/: CMakeLists.txt
Smr/tests/Test01/: CMakeLists.txt  Test01.cpp
Smr/tests/io/: CMakeLists.txt  testImportExport.cpp
Smr/tests/math/testQuaternions/: CMakeLists.txt  testQuaternions.cpp
Smr/tests/testLogger/: CMakeLists.txt  testLogger.cpp
Smr/tests/testSwivel/: CMakeLists.txt  testSwivel.cpp
data/acclaim/: exported.amc  exported.asf
data/bvh/: normal1.bvh
data/hordeContent/: FrameGizmo.blend  FrameGizmo.dae  bone.blend  bone.dae  fly.blend  fly.dae  tentacle.blend  tentacle.blend1  tentacle.blend2  tentacle.dae
data/hordeContent/animations/: FrameGizmo.anim  bone.anim  fly.anim
data/hordeContent/materials/: globalSettings.material.xml  invJac.material.xml
data/hordeContent/materials/FrameGizmo/: Material.material.xml  Material_001.material.xml  Material_002.material.xml
data/hordeContent/materials/bone/: Material.material.xml  Material_001.material.xml
data/hordeContent/materials/fly/: sphere_Sphere_tga.material.xml
data/hordeContent/materials/plane/: Material_001.material.xml
data/hordeContent/materials/platform/: stones.material.xml
data/hordeContent/materials/skybox/: skybox.material.xml
data/hordeContent/materials/sphere/: stones.material.xml
data/hordeContent/models/FrameGizmo/: FrameGizmo.geo  FrameGizmo.scene.xml  Material.material.xml  Material_001.material.xml  Material_002.material.xml  xaxistexture_cone.001.tga  yaxistexture_cone.tga  zaxistexture_cone.002.tga
data/hordeContent/models/bone/: Material.material.xml  Material_001.material.xml  bone.geo  bone.scene.xml
data/hordeContent/models/fly/: fly.geo  fly.scene.xml
data/hordeContent/models/platform/: grid.material.xml  platform.scene.xml
data/hordeContent/models/skybox/: gray-skybox.dds  gray-skybox.material.xml  skybox.material.xml
data/hordeContent/models/tentacle/: TentacleSkin.material.xml  tentacle.geo  tentacle.scene.xml  tentacle.scene.xml~
data/hordeContent/textures/: grid.dds
data/shaders/: Copie de toon.frag  gooch.frag  gooch.vert  toon.frag  toon.vert
data/vicon/: test.V  test.vsk
doc/: Doxyfile  DoxygenLayout.xml
doc/examples/: example.amc  example.bvh  tutorial00_01.cpp  tutorial00_02.cpp  tutorial00_03.cpp  tutorial00_04.cpp  tutorial00_05.cpp  tutorial00_06.cpp  tutorial01_01.cpp  tutorial01_02.cpp  tutorial01_03.cpp  tutorial01_04.cpp  tutorial01_05.cpp  tutorial01_06.cpp  tutorial01_07.cpp  tutorial01_08.cpp  tutorial01_09.cpp  tutorial01_10.cpp  tutorial01_11.cpp  tutorial02_01.cpp  tutorial02_02.cpp  tutorial02_03.cpp  tutorial02_04.cpp  tutorial02_05.cpp  tutorial02_07.cpp  tutorial02_10.cpp  tutorial03_01.cpp  tutorial03_02.cpp  tutorial03_03.cpp  tutorial03_04.cpp  tutorial03_05.cpp  tutorial04_01.cpp  tutorial04_02.cpp  tutorial04_03.cpp  tutorial04_04.cpp  tutorial05_01.cpp  tutorial05_02.cpp  tutorial05_03.cpp  tutorial05_04.cpp  tutorial05_05.cpp  (+1 more)
(+4 files in other folders)
