PROJECT(SAMSARA_DTW)

INCLUDE_DIRECTORIES(	
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_CORE_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${OPENGL_INCLUDE_DIR}
			${GLEW_INCLUDE_DIR}
			${GLUT_INCLUDE_DIR}
			${GLUT_SOURCE_DIR}
			${LOG4CPLUS_INCLUDE_DIR}
			)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(DTW MACOSX_BUNDLE
                   DTW.cpp)

#Take pthread lib into account for linux flavoured OSes
IF(UNIX)
  IF(APPLE)
    TARGET_LINK_LIBRARIES(DTW newmat common core math io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${X11_LIBRARIES} pthread ${LOG4CPLUS_LIBRARIES} "-dylib_file /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib")
  ELSE(APPLE)
    TARGET_LINK_LIBRARIES(DTW newmat common core math io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${X11_LIBRARIES} pthread ${LOG4CPLUS_LIBRARIES} )
  ENDIF(APPLE)
ELSE(UNIX)
  TARGET_LINK_LIBRARIES(DTW newmat common core math io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${LOG4CPLUS_LIBRARIES} )
ENDIF(UNIX)

SOURCE_GROUP(Headers REGULAR_EXPRESSION "[.]h$")
