PROJECT(SAMSARA_LDIM)

INCLUDE_DIRECTORIES(    ${SAMSARA_LDIM_SOURCE_DIR}
			${SAMSARA_CORE_SOURCE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_RENDERER_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${SAMSARA_ACTUATOR_SOURCE_DIR}
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${OPENGL_INCLUDE_DIR}
			${GLEW_INCLUDE_DIR}
			${GLUT_INCLUDE_DIR}
			${LOG4CPLUS_INCLUDE_DIR})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(LowDim WIN32 MACOSX_BUNDLE
                      lowdim.cpp )

#Take pthread lib into account for linux flavoured OSes
IF(UNIX)
  IF(APPLE)
    TARGET_LINK_LIBRARIES(LowDim math newmat common core renderer io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${X11_LIBRARIES} pthread  ${LOG4CPLUS_LIBRARIES})
  ELSE(APPLE)
    TARGET_LINK_LIBRARIES(LowDim math newmat common core renderer io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${X11_LIBRARIES} pthread ${LOG4CPLUS_LIBRARIES} )
  ENDIF(APPLE)
ELSE(UNIX)
  TARGET_LINK_LIBRARIES(LowDim newmat common core math renderer io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${LOG4CPLUS_LIBRARIES} )
ENDIF(UNIX)
