PROJECT(SAMSARA_Physics)

INCLUDE_DIRECTORIES(
			${BULLET_PHYSICS_SOURCE_DIR}/src 
      ${BULLET_PHYSICS_SOURCE_DIR}/src/BulletCollision/BroadphaseCollision
      ${BULLET_PHYSICS_SOURCE_DIR}/src/LinearMath
			${SAMSARA_CORE_SOURCE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_RENDERER_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${SAMSARA_ACTUATOR_SOURCE_DIR}
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${OPENGL_INCLUDE_DIR}
			${SAMSARA_UTILS_SOURCE_DIR}
			${HORDE3D_INCLUDE_DIR}
			${GLFW_INCLUDE_DIR}
			${GLEW_INCLUDE_DIR}
			${GLUT_INCLUDE_DIR}
			${LOG4CPLUS_INCLUDE_DIR})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(testPhysics WIN32 MACOSX_BUNDLE
                           BonePhysics.cpp)

TARGET_LINK_LIBRARIES(testPhysics math newmat common core renderer io utils glfw Horde3D Horde3DUtils BulletDynamics  BulletCollision LinearMath ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${GLFW_LIBRARIES} ${LOG4CPLUS_LIBRARIES} )
 
