PROJECT(SAMSARA_QUATVIZ)

INCLUDE_DIRECTORIES(	${SAMSARA_CORE_SOURCE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_RENDERER_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${OPENGL_INCLUDE_DIR}
			${GLEW_INCLUDE_DIR}
			${GLUT_INCLUDE_DIR}
			${LOG4CPLUS_INCLUDE_DIR})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
 
ADD_EXECUTABLE(eulerVSQuaternion MACOSX_BUNDLE
                                 eulerVSQuaternion.cpp)

TARGET_LINK_LIBRARIES(eulerVSQuaternion newmat common core math renderer io  ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} log4cplus)
 
