PROJECT(SAMSARA_MOTIONPLAYER)

INCLUDE_DIRECTORIES(    ${SAMSARA_MOTIONPLAYER_SOURCE_DIR}
			${SAMSARA_ARGH_SOURCE_DIR}
			${SAMSARA_CORE_SOURCE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_RENDERER_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${OPENGL_INCLUDE_DIR}
			${GLEW_INCLUDE_DIR}
			${GLUT_INCLUDE_DIR}
			${LOG4CPLUS_INCLUDE_DIR})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

IF(WIN32)
	LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH}
		 ${SAMSARA_SOURCE_DIR}/thirdParty/win32/lib/)
ENDIF(WIN32)

ADD_EXECUTABLE(motionplayer MACOSX_BUNDLE
                            motionplayer.cpp)

IF(WIN32)
  LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH} ${SAMSARA_SOURCE_DIR}/thirdParty/win32/lib/)
  TARGET_LINK_LIBRARIES(motionplayer argh newmat common core math renderer io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${LIBXML2_LIBRARIES} ${ZLIB_LIBRARIES} ${SAMARA_ICONV_LIBRARIES} ${LOG4CPLUS_LIBRARIES} )
ELSE(WIN32)
  TARGET_LINK_LIBRARIES(motionplayer argh newmat common core math renderer io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${LIBXML2_LIBRARIES}  ${ZLIB_LIBRARIES} ${SAMARA_ICONV_LIBRARIES} ${LOG4CPLUS_LIBRARIES} )  
ENDIF(WIN32)
