PROJECT(SAMSARA_PCA)

INCLUDE_DIRECTORIES(	${SAMSARA_CORE_SOURCE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_RENDERER_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${SAMSARA_ACTUATOR_SOURCE_DIR}
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${OPENGL_INCLUDE_DIR}
			${GLEW_INCLUDE_DIR}
			${GLUT_INCLUDE_DIR}
			${LOG4CPLUS_INCLUDE_DIR})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(PCA MACOSX_BUNDLE
                   PCA.cpp)

TARGET_LINK_LIBRARIES(PCA math newmat common core renderer io ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${LOG4CPLUS_LIBRARIES} )
 