PROJECT(SAMSARA_COMMON)

INCLUDE_DIRECTORIES(
			${SAMSARA_NEWMAT_SOURCE_DIR}	
			${SAMSARA_MATH_SOURCE_DIR}
			${OPENGL_INCLUDE_DIR}
			${GLEW_INCLUDE_DIR}
			${GLUT_INCLUDE_DIR}
			${LOG4CPLUS_INCLUDE})

ADD_LIBRARY(common STATIC
			Path.cpp
			Path.h
			Smr.h
			SmrSTL.h
			logger.h
			SmrSmartPointer.h)

SOURCE_GROUP(Headers REGULAR_EXPRESSION "[.]h$")
