PROJECT(SAMSARA_TEST)

INCLUDE_DIRECTORIES(
			${SAMSARA_CORE_SOURCE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${SAMSARA_UTILS_SOURCE_DIR}
	    ${GTEST_INCLUDE_DIR})


#
# LINK_DIRECTORIES() issue workaround
# (http://www.mail-archive.com/cmake@cmake.org/msg04341.html)
#


ADD_EXECUTABLE(test01 Test01.cpp)

SET(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /D NDEBUG"  )

IF(WIN32)
  LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
  TARGET_LINK_LIBRARIES(test01 math newmat common core io utils gtest )
ENDIF(WIN32)



ADD_TEST ( Test_SMRQuaternion ${EXECUTABLE_OUTPUT_PATH}/Test01 )