PROJECT(SAMSARA_TEST_QUATERNIONS)

INCLUDE_DIRECTORIES(	${SAMSARA_CORE_SOURCE_DIR}
			${GLEW_INCLUDE_DIR}
			${SAMSARA_MATH_SOURCE_DIR}
			${SAMSARA_COMMON_SOURCE_DIR}
			${SAMSARA_IO_SOURCE_DIR}
			${SAMSARA_NEWMAT_SOURCE_DIR}
			${SAMSARA_UTILS_SOURCE_DIR}
	    ${LOG4CPLUS_INCLUDE})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

IF(WIN32)
	LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH}
		 ${SAMSARA_SOURCE_DIR}/thirdParty/win32/lib/)
ENDIF(WIN32)

ADD_EXECUTABLE(testQuaternions testQuaternions.cpp)

TARGET_LINK_LIBRARIES(testQuaternions newmat common core math io ${LIBXML2_LIBRARIES}  log4cplus )

#ADD_TEST(testImportExport ${EXECUTABLE_OUTPUT_PATH}/testImportExport ${DATA_PATH}/bvh/test.bvh)
